unpackaged/main/default/objects/Webservice_Log__c/Webservice_Log__c.object-meta.xml
<CustomObject>
    <label>Webservice Log</label>
    <nameField>
        <displayFormat>EH - {000000000}</displayFormat>
        <label>Webservice Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Webservice Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>