unpackaged/main/default/objects/Webservice_Log__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Webservice Logs</relationshipLabel>
    <relationshipName>Webservice_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>