unpackaged/main/default/objects/Webservice_Log__c/fields/CORE_EXHIBITOR__c.field-meta.xml
<CustomField>
    <fullName>CORE_EXHIBITOR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CORE EXHIBITOR</label>
    <referenceTo>Core_Exhibitor__c</referenceTo>
    <relationshipLabel>Webservice Logs</relationshipLabel>
    <relationshipName>Webservice_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>