unpackaged/main/default/objects/Webservice_Log__c/fields/HTTP_Request__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Request__c</fullName>
    <label>HTTP Request</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>