unpackaged/main/default/objects/Webservice_Log__c/fields/HTTP_Response__c.field-meta.xml
<CustomField>
    <fullName>HTTP_Response__c</fullName>
    <label>HTTP Response</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>