unpackaged/main/default/objects/Webservice_Log__c/listViews/Address_not_Found_View.listView-meta.xml
<ListView>
    <fullName>Address_not_Found_View</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Address not Found View</label>
    <language>en_US</language>
</ListView>