unpackaged/main/default/objects/Webservice_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CORE_EXHIBITOR__c</columns>
    <columns>HTTP_Request__c</columns>
    <columns>HTTP_Response__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>