unpackaged/main/default/objects/Webservice_Log__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Integration_Name__c</columns>
    <columns>Account__c</columns>
    <columns>CORE_EXHIBITOR__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>