unpackaged/main/default/objects/Webservice_Log__c/listViews/Ambiguous_Address_View.listView-meta.xml
<ListView>
    <fullName>Ambiguous_Address_View</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Ambiguous Address View</label>
    <language>en_US</language>
</ListView>