unpackaged/main/default/objects/Webservice_Log__c/listViews/Data_com_Logs.listView-meta.xml
<ListView>
    <fullName>Data_com_Logs</fullName>
    <columns>NAME</columns>
    <columns>Integration_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Integration_Name__c</field>
        <operation>equals</operation>
        <value>Data.Com</value>
    </filters>
    <label>Data.com Logs</label>
    <language>en_US</language>
</ListView>